<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Helper Station</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_nav_">Nav_Activity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_home__page">Home </string>
    <string name="title_activity_home_page">Home </string>
    <string name="title_activity_about__us_">AboutUsActivity</string>

    <string name="action_settings" />
    <string name="title_activity_settings_pref">Settings</string>
    <string name="key_apply_voice">Apply voice</string>
    <string name="title_apply_voice">Apply voice</string>
    <string name="title_languages">Languages</string>
    <string name="key_language">Language</string>
    <string name="title_language">Language</string>
    <string name="summary_ist_of_languages">List of languages</string>
    <string name="key_trusted_contacts">Trusted contacts</string>
    <string name="title_trusted_contacts">Trusted contacts</string>
    <string name="key_location">Location</string>
    <string name="title_location">Location</string>
    <string name="key_home">Home</string>
    <string name="title_home">Home</string>
    <string name="key_logout">Logout</string>
    <string name="title_logout">Logout</string>

    <string name="bulleted_list">
        Contact us by:\n\n
        <li>Phone number: 01128115577</li>\n\n
        <li>Email:helperstationGP@gmail.com</li>\n
    </string>
    <string name="title_activity_disabled_home">DisabledHomeActivity</string>
    <string name="help">
        Welcome in Helper Station application ...\n\n
        In Home Page:\n
        <li>If you want to call ambulance, police or fire brigade request:</li>\n
            click EMERGENCY service.\n\n
        <li>If you want to request help:</li>\n
            click REQUEST HELP service.\n\n
        <li>If you want to see requests history to reorder the same request:</li>\n
            click REQUESTS HISTORY service.\n\n
        <li>If you want to view profile and/or update your information:</li>\n
            click VIEW PROFILE service.\n\n
        From the button on the upper left-hand corner ,you can find:\n
         <li>Home</li>\n
         <li>Setting </li>\n
         <li>Contact us</li>\n
         <li>Feedback</li>\n
         <li>Complaints</li>\n
         <li>Logout</li>\n
        Others like:\n
         <li>About us</li>\n
         <li>Privacy Policy</li>\n
         <li>Guides, if you want to know how to use the application.</li>\n\n

    </string>
    <string name="title_activity_helper__home">Helper_HomeActivity</string>
    <string name="title_activity_settings_helper">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
